(swaync): fixed gap issue

--- a/home/services/swaync/style.css
+++ b/home/services/swaync/style.css
@@ -20,9 +20,13 @@
 
 .notification {
   border-radius: 7px;
-  margin: 6px 12px;
+  margin: 10px 10px 0px 0px ;
   box-shadow: none;
   padding: 0;
+}
+
+.control-center .notification {
+	margin: 6px 12px;
 }
 
 .notification-content {
